# rapidgzip-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: build-prebuilt.yml  ci.yml  windows-native-diagnostics.yml
crates/rapidgzip/: Cargo.toml  README.md
crates/rapidgzip-sys/: Cargo.toml  README.md  build.rs
crates/rapidgzip-sys/native/rapidgzip-capi/: CMakeLists.txt
crates/rapidgzip-sys/native/rapidgzip-capi/src/: rgz_capi.cpp
crates/rapidgzip-sys/src/: lib.rs
crates/rapidgzip-tests/: Cargo.toml
crates/rapidgzip-tests/src/: lib.rs
crates/rapidgzip/examples/: callback.rs  index.rs  parallel.rs  simple.rs
crates/rapidgzip/src/: lib.rs  native_impl.rs
docs/: VENDORED_UPSTREAM.md
