[package]
name = "rapidgzip"
version = "0.1.0"
edition = "2021"
description = "Safe Rust wrapper for rapidgzip"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseizarubin/rapidgzip-rs"
homepage = "https://github.com/alekseizarubin/rapidgzip-rs"
documentation = "https://docs.rs/rapidgzip"
readme = "README.md"
keywords = ["gzip", "bgzf", "decompression", "parallel", "random-access"]
categories = ["compression", "algorithms"]
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "examples/**",
]

[dependencies]
rapidgzip-sys = { version = "0.1.0", path = "../rapidgzip-sys", optional = true }
thiserror = "1.0"

[dev-dependencies]
flate2 = "1.0"

[features]
default = ["native"]
native = ["dep:rapidgzip-sys"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
